--- a/WEB/index.html
+++ b/WEB/index.html
@@ -49,7 +49,7 @@
 					<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação.</p>
 				</li>
 
-				<li class="grid-1-3">  
+				<li class="grid-1-3">
 					<div class="produtos_icone">
 						<img src="img/produtos/esporte.svg" alt="Bikcraft Passeio">
 					</div>
@@ -112,6 +112,50 @@
 				<a href="sobre.html" class="btn btn-preto">Sobre</a>
 			</div>
 		</section>
+
+		<section class="quebra">
+			<blockquote class="quote-externo container">
+				<p>“o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana.”</p>
+				<cite>WILLIAM MORRIS</cite>
+			</blockquote>
+		</section>
+
+		<footer>
+			<div class="footer">
+				<div class="container">
+
+					<div class="grid-8 footer_historia">
+						<h3>Nossa História</h3>
+						<p>O verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana cotidiana. interesse por todos os detalhes da vida cotidiana cotidiana.</p>
+					</div>
+
+					<div class="grid-4 footer_contato">
+						<h3>Contato</h3>
+						<ul>
+							<li>- 61 98484-1517</li>
+							<li>- contato@bikcraft.com</li>
+							<li>- Brasilia - DF</li>
+						</ul>
+					</div>
+
+					<div class="grid-4 footer_redes">
+						<h3>Contato</h3>
+						<ul>
+							<li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"></a></li>
+							<li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"></a></li>
+							<li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg"></a></li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+
+			<div class="copy">
+				<div class="container">
+					<p class="grid-16">Bikcraft 2021 - Alguns direitos reservados.</p>
+				</div>
+			</div>
+		</footer>
 
 	</body>
 </html>
