--- a/web-bikecraft/contato.html
+++ b/web-bikecraft/contato.html
@@ -31,12 +31,12 @@
 
 		<section class="introducao-interna interna_contato">
 			<div class="container">
-				<h1>Contato</h1>
-				<p>tire suas dúvidas com a gente</p>
+				<h1 data-anime="400" class="fadeInDown">Contato</h1>
+				<p data-anime="800" class="fadeInDown">tire suas dúvidas com a gente</p>
 			</div>
 		</section>
 
-		<section class="contato container">
+		<section class="contato container fadeInDown" data-anime="1200">
 			<form id="form_orcamento" class="contato_form grid-8">
 				<label for="nome">Nome</label>
 				<input type="text" id="nome">
