--- a/web-bikecraft/portfolio.html
+++ b/web-bikecraft/portfolio.html
@@ -31,12 +31,12 @@
 
 		<section class="introducao-interna interna_portfolio">
 			<div class="container">
-				<h1>Portfólio</h1>
-				<p>conheça os projetos que amamos mostrar</p>
+				<h1 data-anime="400" class="fadeInDown">Portfólio</h1>
+				<p data-anime="800" class="fadeInDown">conheça os projetos que amamos mostrar</p>
 			</div>
 		</section>
 
-		<section class="container" data-slide="quote">
+		<section class="container fadeInDown" data-slide="quote" data-anime="1200">
 			<blockquote class="quote_clientes">
 				<p>“Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.”</p>
 				<cite>Barbara Moss</cite>
