--- a/web-bikecraft/produtos.html
+++ b/web-bikecraft/produtos.html
@@ -31,12 +31,12 @@
 
 		<section class="introducao-interna interna_produtos">
 			<div class="container">
-				<h1>Produtos</h1>
-				<p>conheça todos os nossos produtos</p>
+				<h1 data-anime="400" class="fadeInDown">Produtos</h1>
+				<p data-anime="800" class="fadeInDown">conheça todos os nossos produtos</p>
 			</div>
 		</section>
 
-		<section class="container produto_item">
+		<section class="container produto_item fadeInDown" data-anime="1200">
 			<div class="grid-11">
 				<img src="img/produtos/bikcraft-passeio-1.jpg" alt="Bikcraft Passeio">
 				<h2>Passeio</h2>
